@@ -25,7 +25,7 @@ class CSSutilsTestCase(basetest.BaseTestCase):
     }'''
 
     def test_VERSION(self):
-        self.assertEqual('0.9.8a2', cssutils.VERSION)
+        self.assertEqual('0.9.8dev3', cssutils.VERSION)
 
     def test_parseString(self):
         "cssutils.parseString()"
